grammar.js
    module: $ => repeat(
      $.stmt,
    ),

    stmt: $ => choice(
      $._simpleStmts,
      $._complexStmt,
    ),


    _simpleStmts: $ => seq(
      sep_repeat1($._simpleStmt, ';'),
      prec(-100, $._newline),
    ),

    _simpleStmt: $ => seq(
      choice(
        prec(0, choice(
          $.returnStmt,
          $.raiseStmt,
          $.yieldStmt,
          $.discardStmt,
          $.breakStmt,
          $.continueStmt,
          $.pragmaStmt,
          $.importStmt,
          $.importExceptStmt,
          $.exportStmt,
          $.fromStmt,
          $.includeStmt,
          // $.commentStmt,
        )), 
        prec(-100, $.exprStmt),
      ), 
      // optional($.comment),
    ),

    expr: $ => choice(
      prec(2, choice(
        // $.blockExpr,
        // $.ifExpr,
        // $.whenExpr,
        // $.caseExpr,
        // $.forExpr,
        // $.tryExpr,
      )),
      prec(1, $._simpleExpr),
    ),

    _complexStmt: $ => choice(
      // choice(
        $.ifStmt,
        prec(-1, $.inlineIfStmt),
        $.whenStmt,
        prec(-1, $.inlineWhenStmt),
        $.caseStmt,
        $.whileStmt,
        $.tryStmt,
        prec(-1, $.inlineTryStmt),
        $.tryExceptStmt,
        $.tryFinallyStmt,
        $.forStmt,
        $.blockStmt,
        $.staticStmt,
        $.deferStmt,
        $.asmStmt,
        $.bindStmt,
        $.mixinStmt,
        seq('proc', $.routine),
        seq('method', $.routine),
        seq('func', $.routine),
        seq('iterator', $.routine),
        seq('macro', $.routine),
        seq('template', $.routine),
        seq('converter', $.routine),
        // seq('type', section($.typeDef)),
        // seq('const', section($.constant)),
        seq(
          choice(
            alias('let', $.keyw), 
            alias('var', $.keyw), 
            alias('using', $.keyw), 
          ),
          section($, $.variable),
        ),
      // ),
      // prec(-2, seq(
      //   sep_repeat1($._simpleStmt, ';'),
      //   $._newline,
      // )),
    ),

    discardStmt: $ => seq(
      alias('discard', $.keyw), 
      optional(
        optInd($, $.expr),
      ),
    ),

    _simpleExpr: $ => prec.left(seq(
      $.primary,
      repeat(seq($.operatorB, optInd($, $.primary))),
      // optional($.pragma),
    )),

    // TODO:
    primary: $ => choice(
      choice(
        // seq(
        //   $.operatorB,
        //   $.primary,
        //   repeat($.primarySuffix),
        // ),
      //   $.tupleDecl,
      //   $.routineExpr,
      //   $.enumDecl,
      //   $.objectDecl,
      //   $.conceptDecl,
      //   seq(
      //     'bind',
      //     $.primary,
      //   ),
      //   seq(
      //     choice('var', 'out', 'ref', 'ptr', 'distinct'),
      //     $.primary,
      //   ),
      ),
      seq(
        repeat($.operator),
        $._identOrLiteral,
        // $.primarySuffix,
      ),
    ),

    _identOrLiteral: $ => choice(
      $.literal,
      $.generalizedLit,
      $.symbol,
      // $.par,
      // $.arrayConstr,
      // $.setOrTableConstr,
      // $.tuplesConstr,
      // $.castExpr,
    ),

    literal: $ => choice(
      seq($.int_lit, optional(choice($.int_suffix, $.float_suffix))),
      seq($.float_lit, optional($.float_suffix)),
      // alias($.float32_lit, $.float_lit),
      // alias($.float64_lit, $.float_lit),
      $.custom_numeric_lit,
      $.char_lit,
      $.str_lit,
      $.rstr_lit,
      $.triplestr_lit,
      $.nil,
      $.bool_lit,
    ),

    str_lit: $ => seq(
      '"',
      repeat(choice(
        token.immediate(/[^\n\r"]/),
        $.str_esc_seq,
      )),
      token.immediate('"'),
    ),

    bool_lit: $ => choice('true', 'false'),

  }
});




//-------------------------------------------------------------------------------

// function keywords() { return prec(PREC.keyword, choice('addr', 'and', 'as', 'asm', 'bind', 'block', 'break', 'case', 'cast', 'concept', 'const', 'continue', 'converter', 'defer', 'discard', 'distinct', 'div', 'do', 'elif', 'else', 'end', 'enum', 'except', 'export', 'finally', 'for', 'from', 'func', 'if', 'import', 'in', 'include', 'interface', 'is', 'isnot', 'iterator', 'let', 'macro', 'method', 'mixin', 'mod', 'nil', 'not', 'notin', 'object', 'of', 'or', 'out', 'proc', 'ptr', 'raise', 'ref', 'return', 'shl', 'shr', 'static', 'template', 'try', 'tuple', 'type', 'using', 'var', 'when', 'while', 'xor', 'yield')) }
// function parKeywords() { return prec(PREC.keyword, choice('discard' , 'include' , 'if' , 'while' , 'case' , 'try', 'finally' , 'except' , 'for' , 'block' , 'const' , 'let')) }


function optInd($, content) {
  return choice(
    seq(
      $._indent,
      content,
      $._dedent
    ),
    content,
  )
}

function optPar($, content) {
  return choice(
    seq(
      $._indent,
      content,
    ),
    seq(
      // $._samedent,
      content,
    ),
    content,
  )
}

function section($, content) {
  return prec.left(choice(
    seq(
      // optional($.comment),
      content,
    ),
    seq(
      $._indent,
      repeat1(seq(
        choice(
          content,
          // $.comment,
        ),
        // $._samedent,
      )),
      $._dedent,
    ),
  ))
}

function sep_repeat1(content, separator, allow_trailing=true) {
  if (allow_trailing) {
    return seq(
      content,
      repeat(seq(
        separator,
        content,
      )),
      optional(separator),
    )
  } else {
    return seq(
      content,
      repeat(seq(
        separator,
        content,
      )),
    )
  }
}

function sep_repeat(content, separator, allow_trailing=true) {
  if (allow_trailing) {
    return optional(seq(
      content,
      repeat(seq(
        separator,
        content,
      )),
      optional(separator),
    ))
  } else {
    return optional(seq(
      content,
      repeat(seq(
        separator,
        content,
      )),
    ))
  }
}

function hex_lit() { return /0[xX][0-9A-Fa-f](_?[0-9A-Fa-f])*/ }
function dec_lit() { return /[0-9](_?[0-9])*/ }
function oct_lit() { return /0o[0-7](_?[0-7])*/ }
function bin_lit() { return /0[bB][01](_?[01])*/ }

/* TODO: 
 * "For the unary_minus rule there are further restrictions that are not covered
 * in the formal grammar. For - to be part of the number literal its immediately
 * preceeding character has to be in the set 
 * {' ', '\t', '\n', '\r', ',', ';', '(', '[', '{'}.
 * This set was designed to cover most cases in a natural manner."
 */
// function unary_minus() { return prec(PREC.unary, /[ \t\n\r,;\(\[\{][-\+]/,) }

function inlineSimpleStmts($, closing_pattern) {
  return prec.left(seq(
    sep_repeat1($._simpleStmt, ';'),
    closing_pattern,
  ))
}
